# prog2-game2

./: README.md  oi  pyproject.toml
.github/workflows/: deploy.yml
src/: banheiro.py  chao.py  dificuldade.py  estrelitos.py  game.py  inspetora.py  labirinto.py  main.py  missoes.py  player.py  puff.py  telainicial.py  tempolimite.py  tempoteste.py  textos.py  wall.py
